--- a/MY SHERYIAN PROJECT/SHERY_BACKEND/AUTHENTICATION_PROJ/package.json
+++ b/MY SHERYIAN PROJECT/SHERY_BACKEND/AUTHENTICATION_PROJ/package.json
@@ -12,6 +12,7 @@
   "type": "commonjs",
   "dependencies": {
     "@google/genai": "^1.12.0",
+    "@google/generative-ai": "^0.24.1",
     "cookie": "^1.0.2",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.1",
