--- a/MY SHERYIAN PROJECT/SHERY_BACKEND/AUTHENTICATION_PROJ/package.json
+++ b/MY SHERYIAN PROJECT/SHERY_BACKEND/AUTHENTICATION_PROJ/package.json
@@ -17,9 +17,11 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
     "multer": "^2.0.2",
-    "parser": "^0.1.4"
+    "parser": "^0.1.4",
+    "uuid": "^11.1.0"
   }
 }
